devel
-----

* Temporary fix for BTS-1006 (hides new view types).

* Updated arangosync to v2.12.0.

* Improve upload and download speed of hotbackup by changing the way we use
  rclone. Empty hash files are now uploaded or downloaded by pattern, and
  all other files are done in batches without remote directory listing,
  which allows rclone to parallelize and avoid a lot of unnecessary network
  traffic. The format of hotbackups does not change at all.

* Fixed issue BTS-1018: Improve logging of binary velocypack request data.

* BTS-477: added integration tests for covering log parameters.

* Moved the handling of escaping control and unicode chars in the log to 
  the Logger instead of LogAppenderFile.

* Updated ArangoDB Starter to 0.15.5.

* Updated arangosync to v2.12.0-preview-14.

* Fixed BTS-1017: Fixed a graph search issue, where subqueries lead to
  incorrect results when they have been pushed down fully onto a DBServer
  when they are in a Hybrid Disjoint SmartGraph context and
  SatelliteCollections were part of it.

* Fixed issue BTS-1023:
  Added Linux-specific startup option `--use-splice-syscall` to control
  whether the Linux-specific splice() syscall should be used for copying
  file contents. While the syscall is generally available since Linux 2.6.x,
  it is also required that the underlying filesystem supports the splice
  operation. This is not true for some encrypted filesystems, on which
  splice() calls thus fail.
  By setting the startup option `--use-splice-syscall` to `false`, a less
  efficient, but more portable user-space file copying method will be
  used instead, which should work on all filesystems.
  The startup option is not available on other operating systems than Linux.

* Added authenticate header to the HTTP response when status code is 401 
  for HTTP/2.

* Best quality spam pushed down to DEBUG.

* Updated arangosync to v2.12.0-preview-13.

* Implement prefetch for revision trees, in case a batch is created with