@@ -1,6 +1,9 @@
 devel
 -----
 
+* BTS-742: Added restriction for, when in smart graph, not accepting satellites
+  in invalid format when storing a graph (like `{satellites: null}`).
+
 * Temporary fix for BTS-1006 (hides new view types).
 
 * Updated arangosync to v2.12.0.
